2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b236

	* Fix: Add useLoad to getRequestVar in rename_album

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b235

	* Fix: initLanguage does need to be called early, so I've added
	  some extra logic to prevent the functions from being initialized
	  multiple times, so that we can call it later to pick up user prefs

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b234

	* Fix: Comparison typo

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b233

	* Fix: Config wizard properly handles smtpPassword now.  Previously,
	  password values were never saved in the config file, so this was an
	  unseen case.

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b232

	* Fix: Tested and fixed SMTP code

	* Fix: Prevention of bare linefeeds in email messages, which could
	  cause errors with strict MTAs.

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b231

	* Bug 1048609: Escape "&" in navigator URLs

	* Fix: Modify getParentAlbums() so that array_reverse() isn't used -
	  it caused failures when any of the album names contained only
	  numbers - it would reset them to a zero-based incremental,
	  thinking that they were array refs, not strings.

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b230

	* Change: Update opendir() calls to fs_opendir()

	* Change: Remove reliance on the "Get rid of resized" string as 
	  a parameter in Image->resize() due to the fact that translation
	  issues could cause the button on resize_image.php to fail

	* Delete: Remove the Mambo Popup Template, which was never used.

2004-10-17  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b229

	* Remove invalid html from navigator

2004-10-17  Chris Kelly	<ckdake@users.sf.net> 1.4.5-cvs-b228

	* Show if images are hidden when editing captions.

2004-10-15  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b227
