@@ -1,6 +1,6 @@
 <?php
 $name=_("Bpurple");
 $description=_("White with grey pipes and purple highlight");
-$version='1.0.1';
-$last_update='2004-26-08';
+$version='1.0.2';
+$last_update='2004-10-18';
 ?>
