@@ -59,6 +59,7 @@ A:hover	{ color: #C0C0C0; }
 	}
 .mod_title_bg	/* album title hightlight Text is controled by .title */ 
 	{ 
+	  direction: ltr;
 	  background-image: url(../images/mod_toplight_bg.jpg);
 	  height: 28px;
 	}
@@ -145,6 +146,7 @@ A:hover	{ color: #C0C0C0; }
 	}
 .mod_toplight_bg  /* Gallery & Album titles. Text is controled by .head */ 
 	{ 
+	  direction: ltr;
 	  background-image: url(../images/mod_toplight_bg.jpg);
 	  height: 28px;
 	}
