@@ -59,6 +59,7 @@ A:hover	{ color: #202020; }
 	}
 .mod_title_bg	/* album title hightlight Text is controled by .title */ 
 	{ 
+	  direction: ltr;
 	  background-image: url(../images/mod_toplight_bg.jpg);
 	  height: 90px;
 	}
@@ -142,6 +143,7 @@ A:hover	{ color: #202020; }
 	}
 .mod_toplight_bg  /* Gallery & Album titles. Text is controled by .head */ 
 	{ 
+	  direction: ltr;
 	  background-image: url(../images/mod_toplight_bg.jpg);
 	  height: 90px;
 	}
