@@ -1,6 +1,6 @@
 <?php
 $name=_("Butterfly Green");
 $description=_("White with green pipes and butterfly motif");
-$version='1.0.1';
-$last_update='2004-26-08';
+$version='1.0.2';
+$last_update='2004-10-18';
 ?>
