@@ -58,6 +58,7 @@ A:hover	{ color: #C0C0C0; }
 	}
 .mod_title_bg	/* album title hightlight Text is controled by .title */ 
 	{ 
+	  direction: ltr;
 	  height: 26px;
 	}
 .mod_title_right  /* album title hightlight  Text is controled by .title*/ 
@@ -142,6 +143,7 @@ A:hover	{ color: #C0C0C0; }
 	}
 .mod_toplight_bg  /* Gallery & Album titles. Text is controled by .head */ 
 	{ 
+	  direction: ltr;
 	  background-image: url(../images/mod_toplight_bg.jpg);
 	  height: 26px;
 	}
