@@ -1,3 +1,7 @@
+2004-10-18  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b237
+
+	* Fix: Modified Skins to look better in rtl languages. Fixes partly bug #869641.
+	
 2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b236
 
 	* Fix: Add useLoad to getRequestVar in rename_album
